add feature writing

--- a/index.html
+++ b/index.html
@@ -4,25 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <headbar>
     <h1>Welcome to Coco Zhang World!</h1>
-    <button onclick="location.href='projects.html'">Projects</button>
-    <div class="dropdown">
-        <span class="dropdown-trigger">Personal</span>
-        <div class="dropdown-content">
-            <l><a href="writing.html">Writing</a></l>
-            <p>Camera</p>
-            <p>Scrapbook</p>
-        </div>  
+    <div class="button-container">
+        <button onclick="location.href='projects.html'">Projects</button>
+        <div class="dropdown">
+            <span class="dropdown-trigger">Personal</span>
+            <div class="dropdown-content">
+                <l><a href="writing.html">Writing</a></l>
+                <p>Camera</p>
+                <p>Scrapbook</p>
+            </div>  
+        </div>
     </div>
 </headbar>
 <body>
     <img id="profile-pic" src="images/profile.jpg" alt="coco selfie" width="200">
     <p>Hello, this is Coco! I was born and raised in Shanghai, China. 
-        I studied at UWC Atlantic College. The little castle sits on the Atlantic coast in Wales and changed my life. 
-        I am currently a Computer Science and Math major at Wellesley College, constantly pondering the nature of language, 
+        I went to UWC Atlantic College for IBDP. The <a href = "https://www.uwcatlantic.org/castle">little castle</a> sits on the Atlantic coast in Wales and changed my life. 
+    </p>
+    <p>
+        I am currently a Computer Science and Math major at Wellesley College where I'm interested in research on interpretable AI 
+        & robust ML algorithms, as well as projects at the intersection of our physical, applied world and its soft representations. 
+        I do these constantly pondering the nature of language, 
         politics, and arts. </p>
     <p>In this website, you can find my research, coursework projects, personal writing, etc. Feel free hang out in this space to learn more about me!</p>
     <p>Find me at:</p>
