--- a/writing.html
+++ b/writing.html
@@ -8,8 +8,19 @@
 </head>
 <headbar>
             <h1>My Writings</h1>
+            <div class="button-container">
+                <button onclick="location.href='index.html'">Home</button>
+                <div class="dropdown">
+                    <span class="dropdown-trigger">Personal</span>
+                    <div class="dropdown-content">
+                        <l><a href="writing.html">Writing</a></l>
+                        <p>Camera</p>
+                        <p>Scrapbook</p>
+                    </div>  
+                </div>
+            </div>
             <div id="tag-filter"></div>
-</heardbar>
+</headbar>
 <body>
     <div class="container">
         
