detail page setup

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <span class="dropdown-trigger">Personal</span>
                     <div class="dropdown-content">
                         <l><a href="writing.html">Writing</a></l>
-                        <p>Camera</p>
-                        <p>Scrapbook</p>
+                        <l><a href="camera.html">Camera</a></l>
+                        <l><a href="scrapbook.html">Scrapbook</a></l>
                     </div>  
                 </div>
             </div>
