--- a/writing.html
+++ b/writing.html
@@ -14,9 +14,9 @@
                     <span class="dropdown-trigger">Personal</span>
                     <div class="dropdown-content">
                         <l><a href="writing.html">Writing</a></l>
-                        <p>Camera</p>
-                        <p>Scrapbook</p>
-                    </div>  
+                        <l><a href="camera.html">Camera</a></l>
+                        <l><a href="scrapbook.html">Scrapbook</a></l>
+                    </div>   
                 </div>
             </div>
             <div id="tag-filter"></div>
