--- a/camera.html
+++ b/camera.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Writings</title>
+    <title>My Cameraworks</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.18.1/mapbox-gl.css" rel="stylesheet" />
 </head> 
-<headbar>
+<header>
             <h1>My Camera</h1>
             <div class="container">
                 <div class="column">
-                    <p>I have used a Canon EOS digital camera for everything!</p>
-                    <p>Help yourself to the photos and videos edited from my life and travel.</p>
+                    <p>Everything by a Canon EOS digital camera.</p>
+                    <p>Explore my photos and videos!</p>
                 </div>
                 <div class="button-container">
                     <button onclick="location.href='index.html'">Home</button>
+                    <button onclick="location.href='projects.html'">Projects</button>
                     <div class="dropdown">
                         <span class="dropdown-trigger">Personal</span>
                         <div class="dropdown-content">
@@ -26,8 +27,10 @@
                     </div>
                 </div>
             </div>
-</headbar>
+        </header>
 <body>
+    <h2>World Map of My Photos</h2>
+    <p>Under Maintenance: Soon you will be able to click on the map pins to see where I have been shooting recently.</p>
     <div id="map"></div>
     <h2>Slices of my Life</h2>
     <div class="scroll-container" id ="video-scroll">
