--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Welcome to Coco Zhang World!</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<headbar>
+<header>
     <h1>Welcome to Coco Zhang World!</h1>
     <div class="container">
         <div class="column">
             <p>My research, projects, writing, arts...</p>
-            <p>Feel free hang out here & learn more about me!</p>
+            <p id="bottom-p">Feel free hang out here & learn more about me!</p>
         </div>
         <div class="column">
             <div class="button-container">
@@ -27,7 +27,7 @@
             </div>
         </div> 
     </div>
-</headbar>
+</header>
 <body>
     <div class="container">
         <div class="column" id = "left">
