--- a/post.html
+++ b/post.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post</title>
+    <title>My Post</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
-<headbar>
+<header>
         <div class="container">
         <button class="back-button">
             <a href="writing.html">← Back to Gallery</a>
         </button>
-</headbar>
+    </header>
 <body>
         
         <article id="post-content">
