--- a/scrapbook.html
+++ b/scrapbook.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Writings</title>
+    <title>My Scrapbook</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<headbar>
+<header>
             <h1>My Scrapbook</h1>
             <div class="button-container">
                 <button onclick="location.href='index.html'">Home</button>
+                <button onclick="location.href='projects.html'">Projects</button>
                 <div class="dropdown">
                     <span class="dropdown-trigger">Personal</span>
                     <div class="dropdown-content">
@@ -19,7 +20,10 @@
                     </div>   
                 </div>
             </div>
-</headbar>
+        </header>
+<body>
+    <p>Coming Soon!!</p>
+</body>
 
 <!--This website is a digital scrapbook with draggable elements cropped out from my physical scrapbook.
 Users can double-click on any image to see a detailed view with description. They can drag image and click to 
