--- a/writing.html
+++ b/writing.html
@@ -6,21 +6,28 @@
     <title>My Writings</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<headbar>
+<header>
     <h1>My Writings</h1>
-    <div class="button-container">
-    <button onclick="location.href='index.html'">Home</button>
-    <div class="dropdown">
-    <span class="dropdown-trigger">Personal</span>
-        <div class="dropdown-content">
-            <l><a href="writing.html">Writing</a></l>
-            <l><a href="camera.html">Camera</a></l>
-            <l><a href="scrapbook.html">Scrapbook</a></l>
-        </div>   
-    </div>
+    <div class="container">
+        <div class="column">
+             <div id="tag-filter"></div>
+        </div>
+        <div class="column" id ="right-column">
+                <div class="button-container">
+                    <button onclick="location.href='index.html'">Home</button>
+                    <button onclick="location.href='projects.html'">Projects</button>
+                    <div class="dropdown">
+                        <span class="dropdown-trigger">Personal</span>
+                        <div class="dropdown-content">
+                            <l><a class="active" href="writing.html">Writing</a></l>
+                            <l><a href="camera.html">Camera</a></l>
+                            <l><a href="scrapbook.html">Scrapbook</a></l>
+                        </div>   
+                    </div>
+                </div>
             </div>
-            <div id="tag-filter"></div>
-</headbar>
+    </div>
+</header>
 <body>
     <div class="container">
         
