--- a/camera.html
+++ b/camera.html
@@ -35,6 +35,9 @@
     <p>Under Maintenance: Soon you will be able to click on the map pins to see where I have been shooting recently.</p>
     <div id="map"></div>
     <h2>Slices of my Life</h2>
+    <p>I also take a lot of videos, recording the streets I walked, the sea I sat by, and the people I was surrounded by.<br>
+        You can get a glimpse of different times in my life with these video edits below!
+    </p>
     <div class="scroll-container" id ="video-scroll">
         <div class="video-container">
             <h3>The BIG 25 in my Canon | UK, US, Uganda…</h3>
